<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <ImageView
        android:id="@+id/student_photo"
        android:background="@color/material_dynamic_neutral30"
        android:contentDescription="@string/student_photo"
        android:cropToPadding="true"
        android:scaleType="centerInside"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:layout_gravity="center">
    </ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:text="@string/student_title" />
    
    <Space android:layout_height="16dp" android:layout_width="match_parent">
    </Space>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:text="@string/first_name_title" />

    <EditText
        android:id="@+id/first_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name_place"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:text="@string/last_name_title" />

    <EditText
        android:id="@+id/last_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name_place"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:text="@string/school_id_title" />

    <EditText
        android:id="@+id/school_id_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/school_id_place"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/student_birth_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>