<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    app:layout_anchorGravity="center"
    android:orientation="vertical">
    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:text="@string/app_title" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/list_item_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_attendance_image"
            tools:layout_editor_absoluteY="8dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:text="@string/app_choose" />

    <Button
        android:id="@+id/view_attendance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_attendance"/>

    <Button
        android:id="@+id/view_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_student"/>
</LinearLayout>