<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:text="@string/add_student_title" />

    <Space android:layout_height="16dp"
        android:layout_width="match_parent">
    </Space>

    <EditText
        android:id="@+id/student_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_student_hint"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Space android:layout_height="16dp"
        android:layout_width="match_parent">
    </Space>

    <Button
        android:id="@+id/add_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_add"
        app:iconGravity="textStart"
        android:text="@string/add_student"/>


</LinearLayout>